# sqlcipherui

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yml  release.yml
packaging/: entitlements.plist  launcher.py  sqlcipherui.spec
packaging/assets/: icon.icns
packaging/scripts/: build_macos.sh  build_windows.bat
scripts/: apictl  devctl  release  screenshots.mjs  webctl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
